; filepath: /home/slightlywind/Repositories/Legacy/SWD392/class_diagrams/forgot_password.puml
@startuml
package controller {
    class AuthController {
        +forgotPassword()
    }
}

package repository {
    class UserRepo {
        +findUserByEmail()
        +updatePassword()
    }
}

package service {
    class EmailService {
        +sendPasswordResetEmail()
    }
}

package entity {
    class User {
        +id: int
        +username: String
        +email: String
        +password: String
    }
}

AuthController --> UserRepo : uses
AuthController --> EmailService : uses
UserRepo --> User : returns
@enduml
